Tue Feb 14 17:00:43 2006  Tim Janik  <timj@imendio.com>

	* glib/gslice.c: only define _XOPEN_SOURCE to 600 to get at 
	posix_memalign() in case we actually are going to use it, because
	we detected a compliant implementation (#328997).

	* configure.in (enable_included_printf): don't include malloc.h when
	testing for posix_memalign() funcitonality, since this may break the 
	test on some systems (#328997).

2006-02-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstrfuncs.c: Improve docs.

2006-02-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2006-02-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.9.6 ===

	* NEWS: Updates

2006-01-31  Behdad Esfahbod  <behdad@gnome.org>

	* docs/reference/glib/tmpl/relations.sgml (g_relation_insert): Specify
	the type of varargs arguments. (bug #317679)

2006-01-31  Matthias Clasen  <mclasen@redhat.com>

	* autogen.sh: Touch README and INSTALL here to pacify 
	automake.  (#329124, Kjartan Maraas, Tim Janik)
	
Tue Jan 31 16:45:03 2006  Tim Janik  <timj@imendio.com>

	* glib/gdataset.c: carry out all dtalist pointer accesses atomically,
	some missing cases where pointed out by Sebastian Wilhelmi.

Tue Jan 31 12:33:48 2006  Tim Janik  <timj@imendio.com>

	* configure.in: generate build/win32/vs8/Makefile, to fix build breakage.

2006-01-30  David Schleef  <ds@schleef.org>

	* glib/grand.c: Update URL

2006-01-29  Sven Herzberg  <herzi@gnome-de.org>

	* docs/reference/gobject/tmpl/param_value_types.sgml: tell how to
	create container classes which are as flexible as a GValue is

2006-01-27  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.9.5 ===

	* glib/glib.symbols: Add g_mem_gc_friendly as an exported
	variable.

	* NEWS: Updates

2006-01-26  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmem.c (g_mem_init_nomessage): Fix C99isms.  (#328705, 
	Kazuki Iwamoto)

Wed Jan 25 19:16:57 2006  Tim Janik  <timj@imendio.com>
